--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+  <title>The Tech Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -13,8 +13,12 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+        <span role="img" aria-label="tech">💸</span>
+        <lu ></lu>
+        <li class="<a href="/">Home!</a>>Home</li> 
+        <li class="<a href="/">Dashboard</a>>Dashboard</li>
+        <li>Log In</li>
+        <li>Log Out</li>class="<a href="/">Home!</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
