--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,19 +1,13 @@
-<!-- Loop over each object in the projects array -->
-{{#each post as |post| }}
-<div class="row mb-4 project">
+<div class="row mb-4 postView">
   <div class="col-md-5">
     <h2>
+      <article class=""posts">
+      {{#each posts as |post|}}
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{post.id}}">{{post.name}}</a>
+      <a href="/post/{{post.id}}">{{post.title}}</a>
+      <div class ="media postBox"></div>
     </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    <p>Created by {{user.username}} on {{format_date project.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
@@ -22,3 +16,4 @@
   </div>
 </div>
 {{/each}}
+</article>
