--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,19 +1,23 @@
-<div class="row mb-4 postView">
-  <div class="col-md-5">
-    <h2>
-      <article class=""posts">
-      {{#each posts as |post|}}
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/post/{{post.id}}">{{post.title}}</a>
-      <div class ="media postBox"></div>
-    </h2>
-    <p>Created by {{user.username}} on {{format_date project.date_created}}</p>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
-</div>
-{{/each}}
-</article>
+<section class="pageBox">
+	<a class="newPostButton" href="/newPost"><button class="newPostBtn">+ New Post</button></a>
+	{{#each posts as |post|}}
+	<section class="postBox">
+		<div class="postMessageHeader">
+			<div>
+				<h4 class="leftAlign"><a href="/post/{{post.id}}">{{post.title}}</a></h4>
+			</div>
+			<div class="rightAlign">
+				<h5>Posted by {{user.username}} {{format_date post.date_created}}</h5>
+			</div>
+		</div>
+		<div class="postText">
+			<p>
+				{{post.content}}
+			</p>
+		</div>
+	</section>
+	{{/each}}
+</section>
+</body>
+
+</html>
