--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,48 +1,33 @@
-<div class="row">
-  <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
+<section class="pageBox">
+  <div>
+    <h3>{{username}}</h3>
   </div>
-</div>
-
-<div class="row mt-4">
-  <div class="col-md-6">
-    <h3>Create a New Project:</h3>
-
-    <form class="form new-project-form">
-      <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+  {{#each posts as |post|}}
+  <section class="postBox">
+    <div class="postMessageHeader">
+      <div>
+        <h4 class="leftAlign"><a href="/post/{{post.id}}">{{post.title}}</a></h4>
       </div>
-      <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
-      </div>
-      <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
-  </div>
-
-  {{#if projects.length}}
-  <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
-
-    {{#each projects as |project|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
+      <div class="rightAlign">
+        <h5>Posted by {{user.username}} {{format_date post.date_created}}</h5>
       </div>
     </div>
-    {{/each}}
-  </div>
-  {{/if}}
-</div>
+    <div class="postText">
+      <p>
+        {{post.content}}
+      </p>
+      <div class="form-group profileBtnMargin">
+        <button class="editPostBtn" data-id="{{post.id}}"
+          data-target="modal-card">Edit Post</button>
+        <button class="deletePostBtn" data-target="modal-card"
+          data-id="{{post.id}}">Delete Post</button>
+      </div>
+  </section>
+  {{/each}}
+</section>
+<script src="/js/profile.js"></script>
+</body>
 
-<script src="./js/profile.js"></script>
+</html>
+
+
