--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,14 +1,41 @@
-<div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p>
-  <p>
-    <button class="btn btn-primary">The Tech Blog!</button>
-  </p>
-</div>
+<section class="pageBox">
+  <form class="new-post-form">
+    <div class="field is-horizontal">
+      <div class="field-body">
+        <div class="field">
+          <p class="control has-icons-left boxShadow borderRadius">
+            <input class="input textShadow1px" type="text" id="post-title" placeholder="Post Title">
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="field is-horizontal">
+      <div class="field-body">
+        <div class="field">
+          <div class="control boxShadow borderRadius">
+            <textarea class="textarea textShadow1px" id="post-contents" placeholder="Post Contents"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="field is-horizontal">
+      <div class="field-body">
+        <div class="field">
+          <div class="control">
+            <button class="button is-primary textShadow boxShadow">
+              Submit New Post!
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+</section>
+<script src="/js/post.js"></script>
+</body>
+
+</html>
