--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,146 @@
+:root {
+  background-color: beige;
+  --primary: #232F3E;
+  --secondary: #F3A847;
+  --tertiary: #B12704;
+  --light: #fafafa;
+  --dark: #272f32;
+  --error: rgb(228, 46, 1);
+  --spacing-one: calc(1rem * 0.5);
+  --spacing-two: calc(1rem);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  min-height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Karla', sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 16px;
+  color: var(--dark);
+
+}
+
+.header {
+  height: 150px;
+  /* margin-left: 50px; */
+  color: white;
+  background-color: rgb(46, 6, 6);
+}
+
+.navBar {
+  display: flex;
+  
+}
+
+.navMenu {
+  margin-left: 50px;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+.pageBox {
+  background-color: beige;
+  width: 100vw;
+  height: 100vh;
+
+}
+
+.techBlogEmblem {
+  /* border:2px solid black; */
+  margin-left: 50px;
+  border-radius: .5em;
+  text-align: center;
+  width: 300px;
+  background-color: beige;
+  color: black;
+  font-weight: bold;
+  box-shadow: 5px 5px 0px 2px rgb(141, 141, 141);
+  /* font-family: 'Trebuchet MS'; */
+}
+
+.postBox {
+  margin-top: 50px;
+  margin-left: 5%;
+  width: 90%;
+  height: 15%;
+  outline: 5px solid rgb(46, 6, 6);
+  display: flex;
+  flex-wrap: wrap;
+  
+  /* justify-content: space-between; */
+}
+
+.postMessageHeader {
+  background-color: rgb(46, 6, 6);
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  color:rgb(203, 203, 198);
+  
+  /* padding: 20px; */
+  /* justify-content: space-between; */
+}
+
+.postText {
+  padding: 1%;
+  /* outline: 2px solid black; */
+}
+
+.leftAlign {
+  margin-left: 20px;
+  /* float: left; */
+}
+
+.rightAlign {
+  align-items: right;
+  margin-top: 5px;
+  margin-left: 40%;
+  /* margin-right: 20%; */
+  text-align: right;
+}
+
+.newPostBtn {
+  margin-top: 10px;
+  margin-left: 10px;;
+  background-color: rgb(46, 6, 6);
+  color: white;
+  width: 200px;
+  height: 50px;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.new-post-form {
+  margin-left: 30%;
+  margin-top: 10%;
+  outline: 5px solid rgb(46, 6, 6);
+
+}
+
+.new-comment-form {
+  margin-left: 30%;
+  margin-top: 10%;
+  outline: 5px solid rgb(46, 6, 6);
+}
+
+.textarea {
+  width: 80%;
+  height: 100px;
+}
+
+.login-form {
+  
+}
 h1,
 h2,
 h3,
