--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,7 +14,7 @@
     </div>
     <div class="postText">
       <p>
-        {{post.content}}
+        {{post.post_contents}}
       </p>
       <div class="form-group profileBtnMargin">
         <button class="editPostBtn" data-id="{{post.id}}"
