--- a/views/viewPost.handlebars
+++ b/views/viewPost.handlebars
@@ -10,7 +10,7 @@
     </div>
     <div class="postText">
       <p>
-        {{content}}
+        {{post_contents}}
       </p>
       <button>
         <span id="addCommentBtn" data-id="{{id}}" data-target="modal-card">Add comment</span>
@@ -30,7 +30,7 @@
     </div>
     <div class="postText">
       <p>
-        {{comment.commentContent}}
+        {{comment.comment_contents}}
       </p>
     </div>
 
