delete later in userRoutes

--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -17,7 +17,7 @@
                 <div class="field">
                     <div class="control boxShadow borderRadius">
                         <textarea class="textarea" id="post-contents"
-                            placeholder="Post Contents">{{post_contents}}</textarea>
+                            placeholder="Post Contents">{{post_content}}</textarea>
                     </div>
                 </div>
             </div>
