--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,7 @@ body {
   margin-top: 50px;
   margin-left: 5%;
   width: 90%;
-  height: 15%;
+  /* height: 15%; */
   outline: 5px solid rgb(46, 6, 6);
   display: flex;
   flex-wrap: wrap;
